Project/objects/Apttus_QPConfig__ProposalProductAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class in a proposal line item</description>
    <fields>
        <fullName>APTS_Auxillary__c</fullName>
        <label>Auxillary</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV1__c</fullName>
        <defaultValue>125</defaultValue>
        <label>BILHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV2__c</fullName>
        <label>BILHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV3__c</fullName>
        <label>BILHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BILLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV2__c</fullName>
        <label>BILLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV3__c</fullName>
        <label>BILLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILTV1__c</fullName>
        <label>BILTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV1__c</fullName>
        <defaultValue>&quot;Cu&quot;</defaultValue>
        <label>ConductorHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV2__c</fullName>
        <label>ConductorHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV3__c</fullName>
        <label>ConductorHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV1__c</fullName>
        <defaultValue>&quot;Cu&quot;</defaultValue>
        <label>ConductorLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV2__c</fullName>
        <label>ConductorLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV3__c</fullName>
        <label>ConductorLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorTV1__c</fullName>
        <label>ConductorTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV1__c</fullName>
        <label>ConnectionHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV2__c</fullName>
        <label>ConnectionHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV3__c</fullName>
        <label>ConnectionHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV1__c</fullName>
        <label>ConnectionLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV2__c</fullName>
        <label>ConnectionLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV3__c</fullName>
        <label>ConnectionLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionTV1__c</fullName>
        <label>ConnectionTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoolClass__c</fullName>
        <defaultValue>&quot;ONAN&quot;</defaultValue>
        <label>CoolClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoolingManufacture__c</fullName>
        <label>CoolingManufacture</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_CoreMaterial__c</fullName>
        <label>CoreMaterial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoreType__c</fullName>
        <label>CoreType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DEMO_Current__c</fullName>
        <label>Current</label>
        <picklist>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_DEMO_Voltage__c</fullName>
        <label>Voltage</label>
        <picklist>
            <picklistValues>
                <fullName>78</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>278</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_DETCMinusHV1__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DETCMinusHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCMinusLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCMinusLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCNameDetails__c</fullName>
        <label>DETCNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCPlusHV1__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DETCPlusHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCPlusLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCPlusLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCStepSizeHV1__c</fullName>
        <defaultValue>2.5</defaultValue>
        <label>DETCStepSizeHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCStepSizeLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCStepSizeLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV1__c</fullName>
        <defaultValue>&quot;+2 -2 2.5%&quot;</defaultValue>
        <label>DETCTypeHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV2__c</fullName>
        <label>DETCTypeHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV3__c</fullName>
        <label>DETCTypeHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV1__c</fullName>
        <defaultValue>&quot;B_NOTAPS&quot;</defaultValue>
        <label>DETCTypeLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV2__c</fullName>
        <label>DETCTypeLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV3__c</fullName>
        <label>DETCTypeLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeTV1__c</fullName>
        <label>DETCTypeTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Frequency__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Frequency</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_HVBushingNameDetails__c</fullName>
        <label>HVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HVNeutralBushingNameDetails__c</fullName>
        <label>HVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Impedance__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Impedance</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LVBushingNameDetails__c</fullName>
        <label>LVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LVNeutralBushingNameDetails__c</fullName>
        <label>LVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LoadLossEvaluation__c</fullName>
        <label>LoadLossEvaluation</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LoadLosses__c</fullName>
        <label>LoadLosses</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LocalType__c</fullName>
        <label>LocalType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoLoadLossEvaluation__c</fullName>
        <label>NoLoadLossEvaluation</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NoLoadLosses__c</fullName>
        <label>NoLoadLosses</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCMinusStepHV1__c</fullName>
        <label>OLTCMinusStepHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCMinusStepLV1__c</fullName>
        <label>OLTCMinusStepLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCNameDetails__c</fullName>
        <label>OLTCNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCPlusStepHV1__c</fullName>
        <label>OLTCPlusStepHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCPlusStepLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OLTCPlusStepLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCStepSizeHV1__c</fullName>
        <label>OLTCStepSizeHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCStepSizeLV1__c</fullName>
        <label>OLTCStepSizeLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV1__c</fullName>
        <label>OLTCTypeHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV2__c</fullName>
        <label>OLTCTypeHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV3__c</fullName>
        <label>OLTCTypeHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV1__c</fullName>
        <label>OLTCTypeLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV2__c</fullName>
        <label>OLTCTypeLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV3__c</fullName>
        <label>OLTCTypeLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeTV1__c</fullName>
        <label>OLTCTypeTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PhaseQty__c</fullName>
        <defaultValue>3</defaultValue>
        <label>PhaseQty</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV1__c</fullName>
        <label>PowerFullHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV2__c</fullName>
        <label>PowerFullHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV3__c</fullName>
        <label>PowerFullHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV1__c</fullName>
        <label>PowerFullLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV2__c</fullName>
        <label>PowerFullLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV3__c</fullName>
        <label>PowerFullLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullTV1__c</fullName>
        <label>PowerFullTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV1__c</fullName>
        <label>PowerLowHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV2__c</fullName>
        <label>PowerLowHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV3__c</fullName>
        <label>PowerLowHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV1__c</fullName>
        <label>PowerLowLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV2__c</fullName>
        <label>PowerLowLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV3__c</fullName>
        <label>PowerLowLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowTV1__c</fullName>
        <label>PowerLowTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ProductGroup__c</fullName>
        <defaultValue>&quot;GRM&quot;</defaultValue>
        <label>ProductGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLocalID__c</fullName>
        <defaultValue>&quot;2010539&quot;</defaultValue>
        <label>ProductLocalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RatedPowerHighest__c</fullName>
        <label>RatedPowerHighest</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RatedPower__c</fullName>
        <defaultValue>1600</defaultValue>
        <label>RatedPower</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Reactor__c</fullName>
        <label>Reactor</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Replacement__c</fullName>
        <defaultValue>&quot;asdf&quot;</defaultValue>
        <label>Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPowerFull__c</fullName>
        <label>SoundPowerFull</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPower__c</fullName>
        <label>SoundPower</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPressure__c</fullName>
        <label>SoundPressure</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard__c</fullName>
        <defaultValue>&quot;DIN_50464&quot;</defaultValue>
        <label>Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TVBushingNameDetails__c</fullName>
        <label>TVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TVNeutralBushingNameDetails__c</fullName>
        <label>TVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TempClass__c</fullName>
        <defaultValue>&quot;A&quot;</defaultValue>
        <label>TempClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TempRiseWindAvg1__c</fullName>
        <defaultValue>65</defaultValue>
        <label>TempRiseWindAvg1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TempRiseWindAvg2__c</fullName>
        <label>TempRiseWindAvg2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TotalMass__c</fullName>
        <defaultValue>3650</defaultValue>
        <label>TotalMass</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TotalWeight__c</fullName>
        <defaultValue>3650</defaultValue>
        <label>TotalWeight</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltAndFreq__c</fullName>
        <label>VoltAndFreq</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV1__c</fullName>
        <defaultValue>24</defaultValue>
        <label>VoltageClassHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV2__c</fullName>
        <label>VoltageClassHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassHV3__c</fullName>
        <label>VoltageClassHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV1__c</fullName>
        <defaultValue>1.1</defaultValue>
        <label>VoltageClassLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV2__c</fullName>
        <label>VoltageClassLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassLV3__c</fullName>
        <defaultValue>1.1</defaultValue>
        <label>VoltageClassLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageClassTV1__c</fullName>
        <label>VoltageClassTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV1__c</fullName>
        <defaultValue>20000</defaultValue>
        <label>VoltageHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV2__c</fullName>
        <label>VoltageHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageHV3__c</fullName>
        <label>VoltageHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV1__c</fullName>
        <defaultValue>400</defaultValue>
        <label>VoltageLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV2__c</fullName>
        <label>VoltageLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageLV3__c</fullName>
        <label>VoltageLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VoltageTV1__c</fullName>
        <label>VoltageTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WindingsAdditional__c</fullName>
        <label>WindingsAdditional</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WindingsSecondary__c</fullName>
        <label>WindingsSecondary</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineItemId__c</fullName>
        <description>ID of the associated proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Product Attribute Values</relationshipLabel>
        <relationshipName>ProductAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proposal Product Attribute Value</label>
    <nameField>
        <displayFormat>VL-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>